--- a/components/header/styles.module.scss
+++ b/components/header/styles.module.scss
@@ -2,13 +2,13 @@
   display: flex;
   justify-content: center;
   gap: 10px;
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .button {
   background-color: transparent;
   padding: 5px 10px;
-  border: none;
+  border: 1px solid transparent;
   border-radius: 10px;
   cursor: pointer;
 
